# homepage

./: .gitignore  Git.hs  README  alkeiskurssi.html  alkeiskurssi_en.html  english.html  harjoitukset.html  homepage.cabal  homepage.hs  karate_all.html  katat.html  katat_en.html  kds_saannot.html  kuvat1.html  kuvat10.html  kuvat10_en.html  kuvat1_en.html  kuvat2.html  kuvat2_en.html  kuvat3.html  kuvat3_en.html  kuvat4.html  kuvat4_en.html  kuvat5.html  kuvat5_en.html  kuvat6.html  kuvat6_en.html  kuvat7.html  kuvat7_en.html  kuvat8.html  kuvat8_en.html  kuvat9.html  kuvat9_en.html  kuvia_07.html  kuvia_07_en.html  kuvia_08.html  kuvia_08_en.html  kuvia_09.html  kuvia_09_en.html  lajinvalinta.html  (+16 more)
css/: shoto.css  style-desktop.css  style-mobile.css  style.css
hs/: homepage.hs
js/: homepage.js  shoto.js
menus/: menu-harjoittelu.html  menu-harjoittelu_en.html  menu-kuvia.html  menu-kuvia_en.html  menu-lisatietoa_en.html  menu-muistoja.html  menu-yhteystiedot.html
pages/: 404.shtml  alkeiskurssi-ilmo-ok.html  alkeiskurssi-ilmo-ok_en.html  alkeiskurssi-ilmo.html  alkeiskurssi-ilmo_en.html  alkeiskurssi.html  alkeiskurssi_en.html  english.html  graduointi.html  graduointi_en.html  harjoittelu.html  harjoittelu_en.html  harjoittelupaikat.html  harjoittelupaikat_en.html  harjoitukset.html  harjoitukset_en.html  index.html  index_en.html  jasenmaksut.html  jasenmaksut_en.html  karate_all.html  karate_all_en.html  katat.html  katat_en.html  kds_saannot.html  kds_saannot_en.html  kuvia.html  kuvia_07_en.html  kuvia_08.html  kuvia_08_en.html  kuvia_09.html  kuvia_en.html  (+25 more)
(+57 files in other folders)
