name:                homepage
version:             1.0.0.0
synopsis:            Shoto's homepage
description:         Karate Club's homepage
homepage:            http://www.shoto.fi
license:             Apache
license-file:        LICENSE
author:              Jussi Vesala
maintainer:          jussi.vesala@iki.fi
copyright:           2014 Shoto
build-type:          Simple
cabal-version:       >=1.8

executable site
  hs-source-dirs: hs
  main-is: homepage.hs
  build-depends:
    base >= 4.6.0.0,
    filepath >= 1.3.0.2,
    old-locale >= 1.0.0.6,
    time >= 1.4.2,
    process >= 1.2.0.0,
    directory >= 1.2.1.0,
    hakyll >= 4.6.0.0
